<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/publisher_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/full_screen_renderer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top" />
    </FrameLayout>

    <Spinner
        android:id="@+id/stream_info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="3dp"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/sym_action_chat"
        android:layout_alignParentLeft="true"
        android:layout_margin="3dp"
        android:onClick="showSendDataChannelMessageDialog"
        android:layout_centerVertical="true"/>


    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >
        <RadioButton android:id="@+id/rbFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Front"/>
        <RadioButton android:id="@+id/rbRear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Rear"/>
        <RadioButton android:id="@+id/rbUsb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="USB"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stream_id_edittext"
        android:padding="5dp"
        android:background="?android:attr/colorBackground"
        android:layout_above="@id/start_streaming_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Streaming"
        android:id="@+id/start_streaming_button"
        android:onClick="startStreaming"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        />

    <TextView
        android:id="@+id/broadcasting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Broadcasting"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"/>
</RelativeLayout>