...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            >
            <RadioButton
                android:id="@+id/rbScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Screen"/>
            <RadioButton android:id="@+id/rbFront"
                android:layout_width="wrap_content"
...
